--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
   <script src="../node_modules/web-component-tester/browser.js"></script>
 </head>
 
+<!-- Call web components inside the body script -->
 <body>
   <script>
     WCT.loadSuites([
