--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div>
   <hello-world userName="Gary"></hello-world>
   </div>
-  <h1 style="color:red">Hello Peter!<h1>
+  <h1 style="color:red">Hello Jack!<h1>
   <lan-slider min=10 max=100 val=40 onchange="getSliderValue()"></lan-slider>
   <lan-button type="Default" onclick="resetOnclick()">Reset</lan-button>
 
